# Multi-Language-Data-Analyzer

./: README.md  analytics_gateway.cpp  inference_engine.h  postprocessor.cpp  requirements.txt
Analytical/: CMakeLists.txt  README.md
Analytical/bindings/: py_module.cpp
Analytical/config/: config.example.yaml
Analytical/python/: pyproject.toml
Analytical/python/api/core/: pipelines.py
Analytical/python/api/routes/: rules.py
Analytical/src/: inference_engine.cpp  pipeline.cpp  pipeline.h  postprocessor.h  preprocessor.cpp  preprocessor.h  video_source.cpp  video_source.h
api/: alerts.py  main.py  state.py
api/core/: __init__.py  rules.py
api/routes/: pipelines.py
api/static/: app.js  index.html  styles.css
